cmake_minimum_required(VERSION 2.8.3)
project(cracking-the-coding-interview)

add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.1/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.2/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.3/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.4/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.5/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.6/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.7/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.8/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-1/p-1.9/")

add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.1/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.2/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.3/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.4/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.5/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.6/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.7/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-2/p-2.8/")

add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-3/p-3.1/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-3/p-3.2/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-3/p-3.3/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-3/p-3.4/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-3/p-3.5/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-3/p-3.6/")

add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-4/p-4.2/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-4/p-4.3/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-4/p-4.4/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-4/p-4.5/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-4/p-4.6/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-4/p-4.7/")

add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-5/p-5.1/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-5/p-5.2/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-5/p-5.3/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-5/p-5.4/")

add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-8/p-8.1/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-8/p-8.2/")

add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-10/p-10.1/")
add_subdirectory("${CMAKE_SOURCE_DIR}/chapter-10/p-10.3/")